# mod_authnz_jwt

./: .codeclimate.yml  .gitignore  .travis.yml  CHANGELOG  COPYING  ChangeLog  Dockerfile  INSTALL  Makefile  Makefile.am  README.md  authnz_jwt.c  build  commands  configure.ac  install  mod_authnz_jwt.c  test.sh
acinclude.d/: ax_with_apxs.m4
docker/: Dockerfile
tests/: apache_hmac.conf  apache_jwt.conf  apache_jwt_.conf  authnz_jwt.load  debian_tests.sh  jwt.htpasswd  redhat_tests.sh  requirements.txt  test_auth_by_token.py  test_hmac.py  test_jwt.py  test_login.py
